--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "express-validator": "^6.14.0",
     "pg": "^8.7.3",
     "sequelize": "^6.19.0",
     "ts-node-dev": "^1.1.8",
